--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,11 @@
 <%= form_for(article) do |f| %>
+<div class="form-group">
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, class: 'form-control'%>
+</div>
+<div class="form-group">
   <%= f.label :content %>
-  <%= f.text_field :content %>
+  <%= f.text_area :content, class: 'form-control', rows: "100" %>
+</div>
   <%= f.submit %>
 <% end %>
