--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,21 @@
-<h1><%= @article.title %></h1>
 
-<p><%= @article.content %></p>
+<div class="card">
+  <h1 class="card-header">
+    <%= @article.title %>
+    <%= link_to edit_article_path(@article) do %>
+    <i class="fas fa-edit"></i>
+    <% end %>
 
-<%= link_to edit_article_path(@article) do %>
-<i class="fas fa-edit"></i>
-<% end %>
+    <%= link_to article_path(@article), method: :delete do %>
+    <i class="fas fa-trash"></i>
+    <% end %>
+  </h1>
 
-<%= link_to article_path(@article), method: :delete do %>
-<i class="fas fa-trash"></i>
-<% end %>
+  <div class="card-body">
+    <p><%= @article.content %></p>
+
+    <%= link_to "Back to articles", articles_path %>
+  </div>
+</div>
+
+
