--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,8 +33,9 @@ body {
   justify-content: space-between;
   background-color: rgb( 241, 241, 241 );
   background-position: cover;
-  border-bottom: 1px solid rgb(0,0,0);
+  /*border-bottom: 1px solid rgb(0,0,0);*/
   padding-bottom: 0px;
+  box-shadow: 0px 0px 4px rgba(0,0,0,0.2);
 }
 
 a {
