--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,14 @@
-<ul class="list-plain">
-  <% @articles.each do |article| %>
-  <li class="card">
-    <h2 class="card-header"><%= link_to article.title, article_path(article) %></h2>
-    <p class="card-body"><%= article.content %></p>
-  </li>
-  <% end %>
-</ul>
+<div class="mx-5">
+  <ul class="list-plain">
+    <% @articles.each do |article| %>
+    <li class="card">
+      <h2 class="card-header"><%= link_to article.title, article_path(article) %></h2>
+      <p class="card-body"><%= article.content %></p>
+    </li>
+    <% end %>
+  </ul>
+</div>
 
+<% if false %>
 <%= link_to "New Article", new_article_path %>
+<% end %>
